[gd_scene load_steps=7 format=3 uid="uid://da0tetbese7hm"]

[ext_resource type="Script" path="res://enemies/enemy_types/statue/dragon_statue.gd" id="1_vdq76"]
[ext_resource type="PackedScene" uid="uid://dc7otf26gfy33" path="res://enemies/projectiles/fireball/fireball.tscn" id="2_iwicx"]
[ext_resource type="Texture2D" uid="uid://b36oabpq8a3dc" path="res://world_loader/tile_pallettes/green_dungeon.png" id="3_ygr1t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l15ao"]
atlas = ExtResource("3_ygr1t")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjjf1"]
atlas = ExtResource("3_ygr1t")
region = Rect2(32, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_78d4j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l15ao")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjjf1")
}],
"loop": true,
"name": &"nya",
"speed": 5.0
}]

[node name="dragon_statue" type="Node2D" node_paths=PackedStringArray("fire_timer", "anim_sprite", "anim_timer")]
script = ExtResource("1_vdq76")
fire_ref = ExtResource("2_iwicx")
fire_timer = NodePath("fire_timer")
autostart = true
delay = 3.0
anim_sprite = NodePath("nya")
anim_timer = NodePath("anim_del")

[node name="nya" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_78d4j")
animation = &"nya"
autoplay = "default"

[node name="fire_timer" type="Timer" parent="."]

[node name="anim_del" type="Timer" parent="."]

[connection signal="timeout" from="fire_timer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="anim_del" to="." method="_on_anim_del_timeout"]
